--- a/docs/SRSs/BE-02.md
+++ b/docs/SRSs/BE-02.md
@@ -9,7 +9,7 @@
 - **Estimated Time:** 2h
 
 **2. Mô tả (Description)**
-Xây dựng API đăng nhập dành cho Admin. Hệ thống sẽ xác thực email và mật khẩu, nếu hợp lệ sẽ trả về JWT Token để sử dụng cho các request tiếp theo.
+Xây dựng API đăng nhập dành cho Admin. Hệ thống sẽ xác thực username và mật khẩu, nếu hợp lệ sẽ trả về JWT Token để sử dụng cho các request tiếp theo.
 
 **3. Yêu cầu kỹ thuật (Technical Specs)**
 
@@ -17,7 +17,7 @@ Xây dựng API đăng nhập dành cho Admin. Hệ thống sẽ xác thực ema
 - **Payload:**
   ```json
   {
-    "email": "admin@example.com",
+    "username": "admin123",
     "password": "password123"
   }
   ```
@@ -28,13 +28,13 @@ Xây dựng API đăng nhập dành cho Admin. Hệ thống sẽ xác thực ema
 
 **4. Acceptance Criteria (Tiêu chí chấp nhận)**
 
-- [x] **Validation:** Kiểm tra `email` và `password` không được để trống. Email phải đúng định dạng.
+- [x] **Validation:** Kiểm tra `username` và `password` không được để trống. `username` và `password` tối thiểu 6 ký tự.
 - [x] **Authentication:**
-  - Tìm user trong database theo email.
+  - Tìm user trong database theo username.
   - So sánh password gửi lên với password hash trong DB bằng `bcrypt`.
 - [x] **Response Success:**
   - Nếu thông tin đúng, trả về status `200`.
   - Body chứa `token` (thời hạn 30 ngày) và thông tin user (trừ password).
 - [x] **Response Error:**
-  - Nếu sai email hoặc password, trả về status `401 Unauthorized`.
-  - Message: "Invalid email or password".
+  - Nếu sai username hoặc password, trả về status `401 Unauthorized`.
+  - Message: "Invalid username or password".
