refactor: clean up debug logs and enhance authentication flow
- Removed unnecessary console logs from various components and API calls.
- Improved validation messages in the login form for better user experience.
- Updated middleware to ensure proper redirection for authenticated users.
- Enhanced error handling in the registration route for clearer feedback.

--- a/docs/SRSs/FE-01.md
+++ b/docs/SRSs/FE-01.md
@@ -29,22 +29,41 @@ Tương ứng với logic Backend tại `BE-02` (Admin Authentication) và Postm
 
 ## 3. Luồng xử lý & Tương tác (Flow & Interaction)
 
-### Luồng chính
+### Luồng chính (Theo auth_flow.puml)
 
 1. **Truy cập**: Người dùng vào đường dẫn `/login`.
 2. **Nhập liệu**: Người dùng nhập `Username` và `Password`.
 3. **Gửi form**: Người dùng nhấn nút "Login".
    - UI chuyển sang trạng thái loading (disable nút, hiện spinner).
-   - Thực hiện validate (kiểm tra các trường bắt buộc).
-4. **Thành công**:
-   - Nếu API trả về `200 OK` kèm token:
-     - Lưu `token` (bảo mật, ví dụ: HTTP-only cookie hoặc xử lý qua Server Action session management).
-     - Chuyển hướng (Redirect) người dùng đến Dashboard (`/dashboard`).
-     - Hiển thị thông báo thành công (Optional).
-5. **Thất bại**:
-   - Nếu API trả về lỗi (ví dụ: `401 Unauthorized`):
+   - Thực hiện validate phía client (kiểm tra các trường bắt buộc).
+
+4. **Xử lý Backend (Qua NextAuth)**:
+   - Frontend gọi `signIn("Credentials", { username, password })`.
+   - NextAuth Route Handler (`/api/auth/callback/credentials`) nhận request.
+   - NextAuth `authorize()` callback gửi `POST ${BACKEND_URL}/api/auth/login` với `{username, password}`.
+   
+5. **Backend Validation**:
+   - Backend validate input (Zod).
+   - **Nếu Input Invalid**: Backend trả về `400 Bad Request` → Frontend hiển thị lỗi validate.
+   - **Nếu Input Valid**: Backend tìm user trong database.
+   
+6. **Backend Authentication**:
+   - **Nếu User Not Found**: Backend trả về `401 Unauthorized` với message "Invalid credentials" → Frontend hiển thị lỗi.
+   - **Nếu User Found**: Backend so sánh password (bcrypt).
+     - **Nếu Password Mismatch**: Backend trả về `401 Unauthorized` với message "Invalid credentials" → Frontend hiển thị lỗi.
+     - **Nếu Password Match**: Backend generate JWT token và trả về `200 OK` với `{ success: true, token: "...", user: { id, username, role } }`.
+
+7. **Thành công**:
+   - NextAuth nhận token từ Backend.
+   - NextAuth tạo session và lưu token vào HTTP-only cookie.
+   - Frontend nhận kết quả `result.ok === true`.
+   - Frontend chuyển hướng (Redirect) người dùng đến Dashboard (`/dashboard`).
+   - Hiển thị thông báo thành công (Toast/Snackbar).
+
+8. **Thất bại**:
+   - Nếu API trả về lỗi (`400`, `401`, `500`):
      - Tắt trạng thái loading.
-     - Hiển thị thông báo lỗi từ API ("Invalid username or password") trong component Error Alert.
+     - Hiển thị thông báo lỗi từ API (ví dụ: "Username hoặc mật khẩu không đúng") trong component Error Alert/Toast.
 
 ### Quy tắc Validate
 
@@ -61,17 +80,22 @@ Tương ứng với logic Backend tại `BE-02` (Admin Authentication) và Postm
 
 ### Chiến lược Fetching Data
 
-- **Tính năng Framework**: Sử dụng **Server Actions** để xử lý submit form và thiết lập cookie bảo mật.
+- **Tính năng Framework**: Sử dụng **NextAuth.js** (Credentials Provider) để xử lý authentication và session management.
 - **Phương pháp đề xuất**:
-  1. Tạo một Server Action `loginAction(formData)`.
-  2. Bên trong action:
-     - Validate dữ liệu dùng `zod`.
-     - Gửi `POST` request đến Backend API.
-     - Nếu thành công, set session cookie (Token) dùng `cookies().set()`.
-     - Trả về trạng thái thành công.
-  3. Tại Client Component (`LoginForm`):
-     - Sử dụng `useFormState` (hoặc tương tự) để xử lý kết quả trả về.
-     - Khi nhận kết quả thành công, gọi `router.push('/dashboard')`.
+  1. Cấu hình NextAuth Provider trong `src/lib/auth.ts`:
+     - Tạo `CredentialsProvider` với `authorize()` callback.
+     - Trong `authorize()`: Gửi `POST ${BACKEND_URL}/api/auth/login` với `{username, password}`.
+     - Parse response từ Backend: `{ success, token, user }`.
+     - Return object user cho NextAuth: `{ id, name, email, role, accessToken }`.
+  2. Tại Client Component (`LoginForm`):
+     - Sử dụng `signIn("Credentials", { username, password, redirect: false })` từ `next-auth/react`.
+     - Sử dụng `useTransition` để quản lý loading state.
+     - Khi `result.ok === true`: Hiển thị toast success và gọi `router.push('/dashboard')`.
+     - Khi `result.error`: Hiển thị toast error với message từ `result.error`.
+  3. Session Management:
+     - NextAuth tự động lưu session vào HTTP-only cookie.
+     - JWT strategy: Token được lưu trong session JWT.
+     - Middleware kiểm tra session và redirect nếu chưa đăng nhập.
 
 ### Xử lý lỗi (Error Handling)
 
