--- a/docs/SRSs/FE-02.md
+++ b/docs/SRSs/FE-02.md
@@ -45,21 +45,37 @@ Tương ứng với các ticket Backend: `BE-04`, `BE-05`, `BE-06`.
 
 ## 3. Luồng xử lý & Tương tác (Flow & Interaction)
 
-### 3.1. Xem danh sách (Luồng chính)
+### 3.1. Xem danh sách (Luồng chính - Theo resident_flow.puml)
 
 1. User truy cập `/residents`.
-2. **Server Component** gọi API `GET ${process.env.BACKEND_URL}/api/residents`.
-3. Hiển thị dữ liệu lên **ResidentTable**.
-4. Phân trang: User click "Trang 2" -> Update URL query param `?page=2` -> Server Component fetch lại data.
+2. **Server Component** gọi API `GET ${process.env.BACKEND_URL}/api/residents?page={page}&limit={limit}`.
+3. **Backend xử lý**:
+   - Backend query database: `Find Residents (Example: Skip (page-1)*limit, Limit limit)`.
+   - Backend đếm tổng số residents: `Count Total Residents`.
+   - Backend trả về `200 OK` với `{ data: Array<Residents>, pagination: { page, limit, total } }`.
+4. Frontend hiển thị dữ liệu lên **ResidentTable**.
+5. Phân trang: User click "Trang 2" -> Update URL query param `?page=2` -> Server Component fetch lại data với page mới.
 
-### 3.2. Thêm mới Nhân khẩu
+### 3.2. Thêm mới Nhân khẩu (Theo resident_flow.puml)
 
 1. User click "Thêm Nhân khẩu" -> Mở Modal/Form.
-2. Nhập thông tin.
+2. Nhập thông tin (fullName, identityCard, dob, gender, hometown, job, ...).
 3. Click "Lưu".
-4. Gọi API `POST /api/residents`.
-5. Thành công: Đóng modal, Refresh danh sách (revalidateTag hoặc router.refresh), Hiện Toast "Thêm thành công".
-6. Lỗi: Hiển thị lỗi validate (ví dụ: "CCCD đã tồn tại").
+4. Frontend validate phía client (zod).
+5. Gọi API `POST ${BACKEND_URL}/api/residents` với payload `{fullName, identityCard, ...}`.
+6. **Backend xử lý**:
+   - Backend validate input (Zod).
+   - Backend kiểm tra `identityCard` đã tồn tại trong database:
+     - **Nếu Identity Card Exists**: Backend trả về `409 Conflict` với message "Identity card already exists".
+     - **Nếu Identity Card Unique**: Backend insert Resident vào database và trả về `201 Created` với created resident data.
+7. **Thành công** (`201 Created`):
+   - Frontend đóng modal.
+   - Refresh danh sách (revalidatePath hoặc router.refresh).
+   - Hiện Toast "Thêm thành công".
+8. **Lỗi**:
+   - **409 Conflict**: Hiển thị lỗi "CCCD/CMND đã tồn tại".
+   - **400 Bad Request**: Hiển thị lỗi validate từ Backend.
+   - **500 Internal Server Error**: Hiển thị "Lỗi hệ thống, vui lòng thử lại".
 
 ### 3.3. Sửa Nhân khẩu
 
@@ -80,10 +96,15 @@ Tương ứng với các ticket Backend: `BE-04`, `BE-05`, `BE-06`.
 
 ### API Endpoints
 
-- **List**: `GET /api/residents?page={page}&limit={limit}&keyword={keyword}`
-- **Create**: `POST /api/residents`
-- **Update**: `PUT /api/residents/:id`
-- **Delete**: `DELETE /api/residents/:id`
+- **List**: `GET ${BACKEND_URL}/api/residents?page={page}&limit={limit}&keyword={keyword}`
+  - Response: `{ data: Resident[], pagination: { page, limit, total } }`
+- **Create**: `POST ${BACKEND_URL}/api/residents`
+  - Request Body: `{ fullName, identityCard, dob, gender, hometown, job, ... }`
+  - Response Success: `201 Created` với `{ success: true, data: Resident }`
+  - Response Error: `409 Conflict` nếu identityCard đã tồn tại
+- **Update**: `PUT ${BACKEND_URL}/api/residents/:id`
+  - Request Body: `{ fullName?, identityCard?, dob?, ... }` (partial update)
+- **Delete**: `DELETE ${BACKEND_URL}/api/residents/:id`
 
 ### Ghi chú triển khai
 
