--- a/docs/SRSs/FE-03.md
+++ b/docs/SRSs/FE-03.md
@@ -38,12 +38,19 @@ Tương ứng với các ticket Backend: `BE-07`, `BE-08`, `BE-09`.
 
 ## 3. Luồng xử lý & Tương tác (Flow & Interaction)
 
-### 3.1. Tạo Hộ khẩu
+### 3.1. Tạo Hộ khẩu (Theo apartment_flow.puml)
 
 1. Click "Tạo Hộ khẩu".
-2. Điền Form (`name`, `area`, ...).
-3. Gửi `POST /api/apartments`.
-4. Chuyển hướng về Danh sách hoặc trang Chi tiết vừa tạo.
+2. Điền Form (`name`, `apartmentNumber`, `building`, `area`, ...).
+3. Frontend validate phía client (zod).
+4. Gửi `POST ${BACKEND_URL}/api/apartments` với payload `{name, apartmentNumber, building, area, ...}`.
+5. **Backend xử lý**:
+   - Backend validate input.
+   - Backend tạo Apartment trong database.
+   - Backend trả về `201 Created` với `{ success: true, data: Apartment }`.
+6. Frontend nhận response thành công:
+   - Chuyển hướng về Danh sách hoặc trang Chi tiết vừa tạo (`/apartments/[id]`).
+   - Hiển thị Toast "Tạo hộ khẩu thành công".
 
 ### 3.2. Xem Chi tiết
 
@@ -52,28 +59,57 @@ Tương ứng với các ticket Backend: `BE-07`, `BE-08`, `BE-09`.
 3. Fetch dữ liệu `GET /api/apartments/:id`.
 4. Render thông tin chung và danh sách thành viên.
 
-### 3.3. Thêm thành viên vào Hộ
+### 3.3. Thêm thành viên vào Hộ (Theo apartment_flow.puml)
 
 1. Tại trang Chi tiết, click "Thêm thành viên".
-2. Tìm kiếm và chọn một Cư dân (theo Tên/ID).
-3. Chọn Vai trò.
+2. Tìm kiếm và chọn một Cư dân (theo Tên/ID) từ dropdown.
+3. Chọn Vai trò (Chủ hộ / Thành viên).
 4. Click "Thêm".
-5. Gọi `POST /api/apartments/:id/members`.
-6. Refresh lại danh sách thành viên.
+5. Gọi `POST ${BACKEND_URL}/api/apartments/:id/members` với payload `{ residentId, role }`.
+6. **Backend xử lý**:
+   - Backend tìm Apartment theo ID.
+   - Backend tìm Resident theo ID.
+   - **Validation**: Backend kiểm tra Resident đã thuộc một Apartment khác:
+     - **Nếu Resident đã thuộc Apartment khác**: Backend trả về `400 Bad Request` với message "Resident belongs to another apartment".
+     - **Nếu Resident chưa có Apartment**:
+       - Backend update Apartment: `$push: { members: {residentId, role} }`.
+       - Backend update Resident: Set `status = 'Thường trú'` và `apartmentId = {apartmentId}`.
+       - Backend trả về `200 OK` với `{ success: true, data: UpdatedApartment }`.
+7. **Thành công** (`200 OK`):
+   - Frontend refresh lại danh sách thành viên (revalidatePath hoặc refetch).
+   - Hiển thị Toast "Thêm thành viên thành công".
+8. **Lỗi** (`400 Bad Request`):
+   - Hiển thị lỗi "Cư dân này đã thuộc một căn hộ khác".
 
 ## 4. Chi tiết triển khai kỹ thuật (Technical Implementation Details)
 
 ### API Endpoints
 
-- **Create**: `POST /api/apartments`
-- **Get Details**: `GET /api/apartments/:id` (Trả về `{ data: { ..., members: [...] } }`)
-- **Add Member**: `POST /api/apartments/:id/members`
-- **List**: `GET /api/apartments` (Sử dụng logic tương tự BE-14 hoặc endpoint list cơ bản).
+- **Create**: `POST ${BACKEND_URL}/api/apartments`
+  - Request Body: `{ name, apartmentNumber, building, area, ... }`
+  - Response: `201 Created` với `{ success: true, data: Apartment }`
+- **Get Details**: `GET ${BACKEND_URL}/api/apartments/:id`
+  - Response: `{ success: true, data: { ..., members: [{ residentId, role, ... }] } }`
+- **Add Member**: `POST ${BACKEND_URL}/api/apartments/:id/members`
+  - Request Body: `{ residentId, role }`
+  - Response Success: `200 OK` với `{ success: true, data: UpdatedApartment }`
+  - Response Error: `400 Bad Request` nếu resident đã thuộc apartment khác
+  - **Side Effect**: Backend tự động update Resident status = 'Thường trú'
+- **List**: `GET ${BACKEND_URL}/api/apartments?page={page}&limit={limit}&building={building}`
+  - Response: `{ data: Apartment[], pagination: { page, limit, total } }`
 
 ### Logic Frontend
 
-- **Chọn thành viên**: Cần fetch "Danh sách Nhân khẩu" để đổ vào dropdown. Sử dụng ComboBox có tính năng search/autocomplete để xử lý danh sách dài.
-- **Logic Vai trò**: Validate logic nghiệp vụ (nếu có) ví dụ: Một hộ chỉ có 1 Chủ hộ.
+- **Chọn thành viên**: 
+  - Fetch "Danh sách Nhân khẩu" (chỉ những resident chưa có apartmentId) để đổ vào dropdown.
+  - Sử dụng ComboBox có tính năng search/autocomplete để xử lý danh sách dài.
+  - Filter residents có `status !== 'Thường trú'` hoặc `apartmentId === null`.
+- **Logic Vai trò**: 
+  - Validate logic nghiệp vụ: Một hộ chỉ có 1 Chủ hộ (nếu role = "Chủ hộ", kiểm tra xem apartment đã có chủ hộ chưa).
+  - Hiển thị warning nếu đang thay đổi chủ hộ.
+- **Update Resident Status**: 
+  - Khi thêm thành viên thành công, Backend tự động update Resident status = 'Thường trú'.
+  - Frontend có thể refresh danh sách residents nếu đang hiển thị.
 
 ## 5. Git Branch
 
