--- a/docs/SRSs/FE-04.md
+++ b/docs/SRSs/FE-04.md
@@ -49,27 +49,59 @@ Tương ứng với các ticket Backend: `BE-10`, `BE-11`, `BE-14`.
 
 ## 3. Luồng xử lý & Tương tác (Flow & Interaction)
 
-### 3.1. Tạo Khoản thu
+### 3.1. Tạo Khoản thu (Theo fee_payment_flow.puml)
 
 1. Click "Tạo Khoản thu".
-2. Nhập thông tin chi tiết.
-3. Submit `POST /api/fees`.
-4. Chuyển hướng về Danh sách.
+2. Nhập thông tin chi tiết (title, description, type, amount, unit, ...).
+3. Frontend validate phía client (zod).
+4. Submit `POST ${BACKEND_URL}/api/fees` với payload `{ title, description, type, amount, unit, ... }`.
+5. **Backend xử lý**:
+   - Backend validate input.
+   - Backend insert Fee vào database.
+   - Backend trả về `201 Created` với `{ success: true, data: Fee }`.
+6. Frontend nhận response thành công:
+   - Chuyển hướng về Danh sách (`/fees`).
+   - Hiển thị Toast "Tạo khoản thu thành công".
 
-### 3.2. Xem Tình trạng đóng phí
+### 3.2. Xem Tình trạng đóng phí (Theo fee_payment_flow.puml)
 
-1. Tại Danh sách khoản thu, click "Xem tình trạng".
-2. Điều hướng đến `/fees/[id]`.
-3. Fetch dữ liệu `GET /api/fees/:id/status` (Tương ứng BE-14).
-4. Hiển thị Bảng danh sách tất cả căn hộ và trạng thái đóng tiền của họ.
+1. Tại Danh sách khoản thu, click "Xem tình trạng" (icon con mắt).
+2. Điều hướng đến `/fees/[id]` hoặc `/fees/[id]/status`.
+3. Fetch dữ liệu `GET ${BACKEND_URL}/api/fees/:id/status` (Tương ứng BE-14).
+4. **Backend xử lý** (Aggregation Logic):
+   - Backend lấy tất cả Apartments.
+   - Backend lấy tất cả Transactions cho Fee này.
+   - Backend map/merge để tìm các apartment đã đóng vs chưa đóng.
+   - Backend trả về `200 OK` với:
+     ```
+     {
+       success: true,
+       data: {
+         feeInfo: { title, amount, unit, ... },
+         apartments: [
+           { apartmentId, apartmentName, ownerName, status: "PAID" | "UNPAID", paidAmount?, paidDate?, ... },
+           ...
+         ]
+       }
+     }
+     ```
+5. Frontend hiển thị:
+   - **Header**: Thông tin khoản thu (Tên, Đơn giá, Đơn vị).
+   - **Stats Card**: Tổng đã thu (tổng của các transaction có status = "PAID").
+   - **Payment Table**: Danh sách tất cả căn hộ với trạng thái (Badge: "Đã đóng" / "Chưa đóng"), số tiền đã đóng, ngày đóng.
 
 ## 4. Chi tiết triển khai kỹ thuật (Technical Implementation Details)
 
 ### API Endpoints
 
-- **List**: `GET /api/fees?type={type}&limit={limit}`
-- **Create**: `POST /api/fees`
-- **Status Detail**: `GET /api/fees/:id/status`
+- **List**: `GET ${BACKEND_URL}/api/fees?type={type}&limit={limit}&page={page}`
+  - Response: `{ data: Fee[], pagination: { page, limit, total } }`
+- **Create**: `POST ${BACKEND_URL}/api/fees`
+  - Request Body: `{ title, description, type, amount, unit, isActive?, ... }`
+  - Response: `201 Created` với `{ success: true, data: Fee }`
+- **Status Detail**: `GET ${BACKEND_URL}/api/fees/:id/status`
+  - Response: `{ success: true, data: { feeInfo: Fee, apartments: Array<ApartmentStatus> } }`
+  - **ApartmentStatus**: `{ apartmentId, apartmentName, ownerName, status: "PAID" | "UNPAID", paidAmount?, paidDate?, transactionId? }`
 
 ### Logic Chi tiết
 
