--- a/docs/SRSs/FE-05.md
+++ b/docs/SRSs/FE-05.md
@@ -31,36 +31,69 @@ Tương ứng với các ticket Backend: `BE-12`, `BE-13`.
 
 ## 3. Luồng xử lý & Tương tác (Flow & Interaction)
 
-### 3.1. Quy trình Ghi nhận
+### 3.1. Quy trình Ghi nhận (Theo fee_payment_flow.puml và flow_payment.puml)
 
-1. **Chọn ngữ cảnh**: User chọn Căn hộ và Loại phí.
-2. **Tính toán**:
-   - Hệ thống tự động fetch hoặc User click "Tính toán".
-   - Gọi `POST /api/transactions/calculate` với `{ apartmentId, feeId }`.
-   - Hiển thị `totalAmount` trả về (Vd: 500,000 VND).
-3. **Xác nhận**:
-   - User nhập `Tên người nộp` (có thể auto-filled tên chủ hộ).
+1. **Chọn ngữ cảnh**: User chọn Căn hộ (Dropdown) và Khoản thu (Dropdown) từ danh sách.
+
+2. **Tính toán (Calculate Transaction)**:
+   - User click nút "Tính toán" (hoặc hệ thống tự động tính khi chọn đủ Căn hộ và Khoản thu).
+   - Frontend gọi `POST ${BACKEND_URL}/api/transactions/calculate` với payload `{ apartmentId, feeId }`.
+   - **Backend xử lý**:
+     - Backend get Apartment Info (Area, building, ...) từ database.
+     - Backend get Fee Info (Unit Price, Formula, unit, ...) từ database.
+     - Backend tính toán Amount: Ví dụ `Area * UnitPrice` (nếu unit = "m2") hoặc theo công thức khác.
+     - Backend trả về `200 OK` với `{ success: true, totalAmount: 500000, formula?: "...", ... }`.
+   - Frontend hiển thị `totalAmount` trong khu vực "Khu vực Tính toán" (Vd: 500,000 VND).
+   - Frontend hiển thị các thông tin chi tiết: Đơn giá, Số lượng (Vd: Diện tích căn hộ), Thành tiền.
+
+3. **Xác nhận Thanh toán (Record Transaction)**:
+   - User kiểm tra `Tổng tiền` (có thể edit nếu cho phép, hoặc read-only).
+   - User nhập `Người nộp` (Text Input, có thể auto-filled tên chủ hộ từ apartment info).
    - User click "Xác nhận Thanh toán".
-   - Gọi `POST /api/transactions` với `{ apartmentId, feeId, totalAmount, payerName }`.
+   - Frontend gọi `POST ${BACKEND_URL}/api/transactions` với payload `{ apartmentId, feeId, totalAmount, payerName, date? }`.
+   - **Backend xử lý**:
+     - Backend validate input.
+     - Backend tạo Transaction document trong database.
+     - Backend trả về `201 Created` với `{ success: true, data: Transaction }`.
+
 4. **Hoàn tất**:
-   - Hiển thị Thông báo thành công.
+   - Frontend hiển thị Toast "Ghi nhận thanh toán thành công".
+   - Hiển thị Transaction Receipt (tùy chọn).
    - Tùy chọn "In biên lai" (Tính năng tương lai).
-   - Chuyển hướng về trang `Tình trạng phí` hoặc xóa form để nhập tiếp.
+   - Chuyển hướng về trang `Tình trạng phí` (`/fees/[feeId]`) hoặc reset form để nhập tiếp giao dịch mới.
 
 ## 4. Chi tiết triển khai kỹ thuật (Technical Implementation Details)
 
 ### API Endpoints
 
-- **Calculate (Tính toán)**: `POST /api/transactions/calculate`
-  - Input: ApartmentID, FeeID.
-  - Output: `{ totalAmount, formula }`.
-- **Record (Ghi nhận)**: `POST /api/transactions`
-  - Input: ApartmentID, FeeID, TotalAmount, PayerName.
+- **Calculate (Tính toán)**: `POST ${BACKEND_URL}/api/transactions/calculate`
+  - Request Body: `{ apartmentId, feeId }`
+  - Response: `200 OK` với `{ success: true, totalAmount: number, formula?: string, apartmentInfo?: {...}, feeInfo?: {...} }`
+  - **Logic Backend**: 
+    - Get Apartment (Area, building, ...)
+    - Get Fee (Unit Price, Formula, unit, ...)
+    - Calculate: `Area * UnitPrice` (nếu unit = "m2") hoặc theo formula khác
+- **Record (Ghi nhận)**: `POST ${BACKEND_URL}/api/transactions`
+  - Request Body: `{ apartmentId, feeId, totalAmount, payerName, date? }`
+  - Response: `201 Created` với `{ success: true, data: Transaction }`
+  - **Transaction Data**: `{ _id, apartmentId, feeId, totalAmount, payerName, createdBy, date, ... }`
 
 ### Logic Frontend
 
-- **Quản lý State**: Cần lưu `Apartment` và `Fee` đã chọn để truyền vào hàm tính toán.
-- **Tính toán bất đồng bộ**: Đảm bảo `Tổng tiền` được lấy từ logic Backend (đặc biệt các loại phí theo diện tích) chứ không phải do Frontend tự tính (để đảm bảo nhất quán).
+- **Quản lý State**: 
+  - Lưu `apartmentId` và `feeId` đã chọn.
+  - Lưu `calculatedAmount` (kết quả từ API calculate).
+  - Lưu `apartmentInfo` và `feeInfo` (nếu API trả về) để hiển thị chi tiết.
+- **Tính toán bất đồng bộ**: 
+  - **Quan trọng**: `Tổng tiền` PHẢI được lấy từ Backend API `/api/transactions/calculate`, KHÔNG tự tính ở Frontend.
+  - Lý do: Đảm bảo tính nhất quán, đặc biệt các loại phí theo diện tích (Area * UnitPrice) hoặc theo công thức phức tạp.
+  - Frontend chỉ hiển thị kết quả từ Backend.
+- **Loading States**: 
+  - Hiển thị loading spinner khi đang gọi API calculate.
+  - Disable nút "Xác nhận Thanh toán" khi `totalAmount` chưa được tính.
+- **Validation**:
+  - Bắt buộc chọn Căn hộ và Khoản thu trước khi tính toán.
+  - Bắt buộc nhập `payerName` trước khi xác nhận thanh toán.
 
 ## 5. Git Branch
 
